--- a/Vistas/Styles/StylesButtonForm.xaml
+++ b/Vistas/Styles/StylesButtonForm.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="ButtonFormBlack" TargetType="{x:Type Button}">
+    <Style x:Key="ButtonFormBlackOld" TargetType="{x:Type Button}">
 
         <Style.Setters>            
             <Setter Property="Control.Width" Value="120" />
@@ -43,14 +43,14 @@
         <Border x:Name="brdButton"
             Background="#232323" 
             BorderBrush="#050505" 
-            BorderThickness="2" 
-            CornerRadius="10" 
-            Padding="3"
-            Margin="3"
+            BorderThickness="1" 
+            CornerRadius="7" 
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            Width="130"
-            Height="50"
+            Width="auto"
+            Padding="7,0"
+            Height="40"
+            Cursor="Hand"
             >
              <Grid>
                 <Grid.RowDefinitions>
@@ -67,8 +67,10 @@
         </ControlTemplate.Triggers>
         
     </ControlTemplate>
-    
-    <Style x:Key="tmplClientes" TargetType="Button">
+
+    <Style x:Key="ButtonFormBlack" TargetType="Button">
+        <Setter Property="Foreground" Value="#fefefe"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="Template" Value="{StaticResource ResourceKey=btnClientes}"/>
     </Style>
     
