--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winAltaItemPedido" Height="650" Width="600"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow"
         >
@@ -52,9 +53,46 @@
 
             </Grid>
            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="237" />
-        
 
-            <ListView Grid.Row="1" Name="lvwArticulos" Width="598" Grid.Column="1" Height="auto" Background="Black" Foreground="White"  ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" HorizontalContentAlignment="Center" IsSynchronizedWithCurrentItem="True"  BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
+
+            <ListView Grid.Row="1" Name="lvwArticulos" Width="550" Grid.Column="1" Height="auto" ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" IsSynchronizedWithCurrentItem="True" SelectionChanged="lvwArticulos_SelectionChanged" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
+                
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <Border CornerRadius="2" SnapsToDevicePixels="True"  
+                                BorderThickness="{TemplateBinding BorderThickness}"   
+                                BorderBrush="{TemplateBinding BorderBrush}"   
+                                Background="{TemplateBinding Background}">
+                                        <Border Name="InnerBorder" CornerRadius="1" BorderThickness="1">
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition MaxHeight="11" />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <GridViewRowPresenter Grid.RowSpan="2"   
+                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"   
+                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                            </Grid>
+                                        </Border>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="true" >
+                                <Setter Property="Background" Value="#5e8eb5" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" Value="#505157"></Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Art_Id}"/>
@@ -69,34 +107,81 @@
             </ListView>
             
             <StackPanel Margin="20" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="btnAdd" ToolTip="Agregar el artículo al pedido" Content="+" Width="40" Click="btnAdd_Click" Style="{StaticResource ButtonFormBlack}" ></Button>
+                <Button Name="btnAdd" ToolTip="Agregar el artículo al pedido" Height="auto" Width="auto" Padding="5" Click="btnAdd_Click" Style="{StaticResource ButtonFormBlack}" >
+                    <Button.Content>
+                        <fa:ImageAwesome Icon="PlusCircle" VerticalAlignment="Center" Foreground="#eeeeee" HorizontalAlignment="Center" Height="14" Margin="14,0"></fa:ImageAwesome>
+                    </Button.Content>
+                </Button>
             </StackPanel>
-            <Popup Name="Dialogo" StaysOpen="True" Placement="Center" MaxWidth="800" MaxHeight="1000">
+            
+            <Popup Name="Dialogo" StaysOpen="True" Placement="Center" MaxWidth="800" MaxHeight="1000" AllowsTransparency="True">
+
                 <Grid>
-                    
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="200*"/>
-                        <RowDefinition Height="100*"/>
-                        <RowDefinition Height="100*"/>
-                    </Grid.RowDefinitions>
-     
-                        
-                        <TextBlock Name="txbCantidad" HorizontalAlignment="Center"  Text="Ingrese Cantidad"  Style="{StaticResource FormDescription}" Grid.Row="0"  Width="237" />
+
+                    <Border Style="{StaticResource MainGridStyle}">
+                    </Border>
+                    <Grid Margin="30" Width="auto" Height="auto">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="200*"/>
+                            <RowDefinition Height="100*"/>
+                            <RowDefinition Height="100*"/>
+                        </Grid.RowDefinitions>
+
+
+                        <TextBlock Name="txbCantidad" HorizontalAlignment="Center"  Text="¿Cuántos elementos?"  Style="{StaticResource FormDescription}" Grid.Row="0"  Width="237" />
 
                         <TextBox Name="txtCantidad" Grid.Row="1" HorizontalAlignment="Center"  Grid.Column="1" Style="{StaticResource EstiloError}">
-                            
+
                         </TextBox>
-                    <DockPanel Grid.Row="2" >
-                        <Button Content="GUARDAR" Name="btnGuardarCant"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnGuardarCant_Click"></Button>
-                        <Button Content="CANCELAR" Name="btnCancelarCant"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnCancelarCant_Click"></Button>
+                        <DockPanel Grid.Row="2" Margin="5,10" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Button Content="GUARDAR" Name="btnGuardarCant"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnGuardarCant_Click"></Button>
+                            <Button Content="CANCELAR" Name="btnCancelarCant"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnCancelarCant_Click"></Button>
 
-                    </DockPanel>
+                        </DockPanel>
+                    </Grid>
+
                 </Grid>
+                
+                 
+            </Popup>
 
-    
-    </Popup>
+            <ListView IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="200" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <Border CornerRadius="2" SnapsToDevicePixels="True"  
+                                BorderThickness="{TemplateBinding BorderThickness}"   
+                                BorderBrush="{TemplateBinding BorderBrush}"   
+                                Background="{TemplateBinding Background}">
+                                        <Border Name="InnerBorder" CornerRadius="1" BorderThickness="1">
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition MaxHeight="11" />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
+                                                <GridViewRowPresenter Grid.RowSpan="2"   
+                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"   
+                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                            </Grid>
+                                        </Border>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
 
-            <ListView  IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="true" >
+                                <Setter Property="Background" Value="#5e8eb5" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" Value="#505157"></Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
