--- a/Vistas/winPedidos.xaml
+++ b/Vistas/winPedidos.xaml
@@ -2,8 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        Title="winPedidos" Height="650" Width="1000"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+        
+        Title="winPedidos" Height="556" Width="600"  Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
 
     <Window.Resources>
         <ObjectDataProvider
@@ -28,26 +30,18 @@
     </Window.Resources>
 
     <Grid>
-        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+        <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
                 <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
-                <Label Name="lblWinTitle" Content="Alta de Nuevo Pedido" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Minimizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Listado de Pedidos" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
-            <Border.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#232323" Offset="0.6" />
-                    <GradientStop Color="#121212" Offset="0.9" />
-                    <GradientStop Color="#070707" Offset="1" />
-                </LinearGradientBrush>
-            </Border.Background>
         </Border>
 
-        <Grid>
-            <Grid x:Name="lGrid" Margin="0,40,0,10">
+        <Grid Margin="0,0,0,40">
+            <Grid x:Name="lGrid" Margin="0,60,0,10">
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="362*" />
                     <ColumnDefinition Width="588*" />
                 </Grid.ColumnDefinitions>
 
@@ -59,45 +53,12 @@
                     </Grid.RowDefinitions>
 
 
-                    <Grid Margin="20,0">
+                    <Grid Height="344">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="270*" />
                         </Grid.RowDefinitions>
 
-                        <Grid Name="grdArticuloForm">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="189*" />
-                                <ColumnDefinition Width="191*" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="28*" />
-                                <RowDefinition Height="12*" />
-                                <RowDefinition Height="12*" />
-                                <RowDefinition Height="12*" />
-                                <RowDefinition Height="12*" />
-                                <RowDefinition Height="12*" />
-                            </Grid.RowDefinitions>
-
-                            <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Pedido" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
-                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Pedido" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
-
-                            <Label HorizontalAlignment="Right" Grid.Row="1" Content="Mesa:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
-                            <Label HorizontalAlignment="Right" Grid.Row="2" Content="Fecha de Entrega:" Name="label3" Style="{StaticResource StyleLabelForm}" />
-                            <Label HorizontalAlignment="Right" Grid.Row="3" Content="Cliente:" Name="lblCategoria" Style="{StaticResource StyleLabelForm}" />
-
-                           <Label HorizontalAlignment="Right" Content="Comensales" Name="lblComensales" Grid.Row="5" Style="{StaticResource StyleLabelForm}" Margin="0,6,10,0" />
-
-                            <!--<ComboBox HorizontalAlignment="Left" Name="cboMesas" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>-->
-                            <TextBlock HorizontalAlignment="Left" Name="txbMesas" Style="{StaticResource StyleLabelForm}" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>
-
-
-                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboCliente" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1"  Width="120" />
-                            <TextBox   Width="60" Name="txtComensal" VerticalAlignment="Center"  Grid.Column="1" Margin="52,21,0,17" Grid.Row="5" Style="{StaticResource EstiloError}">
-                                
-                            </TextBox>
-                            <DatePicker Grid.Column="1" Grid.Row="2" Height="25" HorizontalAlignment="Left"  Name="dpFecha" VerticalAlignment="Center" Width="115" Margin="10,22,0,17" />
-                        </Grid>
-
+                        
                         <!--
                     <StackPanel Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" Grid.Row="1">
                         <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
@@ -108,25 +69,40 @@
                     </Grid>
 
                     <!-- grid botones-->
-                    <Grid Margin="5" Grid.Row="2">
-                        <Button Name="btnagregarPed" ToolTip="Agregar un nuevo artículo al pedido" Grid.Column="0" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center" Click="btnagregarPed_Click"></Button>
-                    </Grid>
                 </Grid>
 
-                <ListView ItemsSource="{Binding Source={StaticResource VISTA_PEDIDO}}" Name="lvwPedidos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="2,193,23,168" SelectionChanged="lvwPedidos_SelectionChanged">
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Ped_Id}"/>
-                            <GridViewColumn Width="150" Header="Fecha de Emisión" DisplayMemberBinding="{Binding Ped_Fecha_Emision}"/>
-                            <GridViewColumn Width="150" Header="Fecha de Entrega" DisplayMemberBinding="{Binding Ped_Fecha_Entrega}"/>
-                            <GridViewColumn Width="80" Header="Facturado" DisplayMemberBinding="{Binding Ped_Facturado}"/>
-                            <GridViewColumn Width="80" Header="Comensales" DisplayMemberBinding="{Binding Ped_Comensales}"/>
-                            <GridViewColumn Width="40" Header="Mesa" DisplayMemberBinding="{Binding Mesa.Mesa_Id}"/>                            
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-                <Button IsEnabled="false" ToolTip="Ver items del pedido" Content="Ver Ítems" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="45" HorizontalAlignment="Left" Margin="106,439,0,0" Name="btnAddItem" VerticalAlignment="Top" Click="btnAddItems_Click" Width="123" />
-                <Button IsEnabled="false" ToolTip="Crea una factura del pedido, tambien puede ver una vista previa" Content="Facturar Pedido" Style="{StaticResource ButtonFormBlack}" Width="116"  Grid.Column="1" Height="40" HorizontalAlignment="Left" Margin="393,442,0,0" Name="btnverPedido" VerticalAlignment="Top" Click="verPedido_Click" />
+                <Border CornerRadius="5" Grid.Column="1" Background="#363739" Margin="7,0">
+                    <StackPanel>
+
+                        <DockPanel HorizontalAlignment="Left">
+                            <fa:ImageAwesome Icon="ThList" VerticalAlignment="Center" Foreground="#eeeeee" HorizontalAlignment="Center" Height="14" Margin="14,0"/>
+
+                            <TextBlock FontWeight="Bold" Grid.Column="1" VerticalAlignment="Top" Margin="0,20,0,0" FontSize="20" Style="{StaticResource StyleLabelForm}" Text="Listado de Pedidos" HorizontalAlignment="Left"></TextBlock>
+
+                        </DockPanel>
+
+                        <ListView ItemsSource="{Binding Source={StaticResource VISTA_PEDIDO}}" Name="lvwPedidos" Grid.Column="1" Background="#232323" Foreground="White" HorizontalContentAlignment="Center" BorderBrush="Black" VerticalAlignment="Top" Height="284" SelectionChanged="lvwPedidos_SelectionChanged" Width="auto" Margin="7,0">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Ped_Id}"/>
+                                    <GridViewColumn Width="150" Header="Fecha de Emisión" DisplayMemberBinding="{Binding Ped_Fecha_Emision}"/>
+                                    <GridViewColumn Width="150" Header="Fecha de Entrega" DisplayMemberBinding="{Binding Ped_Fecha_Entrega}"/>
+                                    <GridViewColumn Width="80" Header="Facturado" DisplayMemberBinding="{Binding Ped_Facturado}"/>
+                                    <GridViewColumn Width="80" Header="Comensales" DisplayMemberBinding="{Binding Ped_Comensales}"/>
+                                    <GridViewColumn Width="40" Header="Mesa" DisplayMemberBinding="{Binding Mesa.Mesa_Id}"/>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <DockPanel Margin="20" HorizontalAlignment="Center">
+                            <Button Foreground="#aaaaaa" IsEnabled="false" ToolTip="Ver items del pedido" Content="Ver Ítems" Style="{StaticResource ButtonFormBlack}" Grid.Column="1"  HorizontalAlignment="Left" Name="btnAddItem" VerticalAlignment="Top" Click="btnAddItems_Click" Width="123" />
+                            <Button Foreground="#aaaaaa" IsEnabled="false" ToolTip="Crea una factura del pedido, tambien puede ver una vista previa" Content="Facturar Pedido" Style="{StaticResource ButtonFormBlack}" Width="116"  Grid.Column="1" Height="40" HorizontalAlignment="Left" Name="btnverPedido" VerticalAlignment="Top" Click="verPedido_Click" />
+
+                        </DockPanel>
+                    </StackPanel>
+
+                </Border>
+                
+                
             </Grid>
 
         </Grid>
