--- a/Vistas/Styles/Dictionary1.xaml
+++ b/Vistas/Styles/Dictionary1.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:fa="http://schemas.fontawesome.io/icons/">
+                                     
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="{x:Type RadioButton}" x:Key="BotondeMenu">
         <Style.Setters>
             <Setter Property="Template">
@@ -194,14 +196,15 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Button Background="NavajoWhite"  Margin="10,5">
+                        <Button Background="#232529"  Margin="10,5">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="80*" />
                                     <RowDefinition Height="220*" />
                                 </Grid.RowDefinitions>
-                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
-                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/Agregar.png"/>
+                                <fa:ImageAwesome Icon="Plus"  VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Height="35" Width="30"/>
+
+
                             </Grid>
                         </Button>
                     </ControlTemplate>
